--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<body>
+    <p>My favorite color is <span class="favorite-color">teal</span>.</p>
+  </body>
     <script type="text/javascript" src="./script.js">
 </script>
 
